2011-01-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.13 ========================
	* 

2009-12-07  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.12 ========================
	* 

2008-12-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11.1 ========================
	* 

2008-10-16  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.11 ========================
	* 

2008-03-14  Andreas Kupries  <andreask@activestate.com>

	* ansi/code/ctrl.tcl (DEFC): Fixed bad use of 'args' argument,
	* pkgIndex.tcl: reported in [SF Tcllib Bug 1826418], by Erik
	* ansi_cctrl.man: Leunissen. Bumped to version 0.1.1.

2007-09-12  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.10 ========================
	* 

2007-03-22  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* ansi_cattr.man: Fixed all warnings due to use of now
	* ansi_cctrl.man: deprecated. Added a section about how
	* ansi_cmacros.man: to give feedback.
	* ansi_code.man:
	* ansi_ctrlu.man:
	* ansi_send.man:
	* imenu.man:
	* ipager.man:
	* receive.man:
	* term.man:
	* term_bind.man:
	* term_send.man:

2006-10-03  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tcllib 1.9 ========================
	* 

2006-08-09  Andreas Kupries <andreask@activestate.com>

	* ../../examples/term/menu2: Updated to changes in the
	  package term::receive::bind.
	* term_bind.man: Updated documentation as well.

2006-07-24  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* bind.tcl: Added methods 'default' and 'unlisten', changed action
	  callbacks to take the invoking character sequence.
	* term_bind.man: Documented above changes.

	* imenu.tcl:  New packages, terminal widgets, menu and paging text
	* ipager.tcl: display.
